# django-backend

colab/: 1.data_analysis.ipynb  oz_machin_learning.ipynb
oz-backend-django/: pyproject.toml
oz-backend-django/boards/: admin.py  models.py
oz-backend-django/boards/migrations/: 0001_initial.py  0002_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
oz-backend-django/config/: settings.py  urls.py
oz-backend-django/feeds/: models.py  serializers.py  urls.py  views.py
oz-backend-django/feeds/migrations/: 0001_initial.py
oz-backend-django/reviews/: models.py  serializers.py  views.py
oz-backend-django/reviews/migrations/: 0001_initial.py
oz-backend-django/users/: admin.py  models.py  serializers.py  urls.py  views.py
oz-backend-django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
part1/: pyproject.toml
part1/config/: settings.py  urls.py
part1/freeds/: apps.py  views.py
part1/freeds/templates/: feeds.html
