[tool.poetry]
name = "oz-backend-django"
version = "0.1.0"
description = ""
authors = ["lss018000 <lss018000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
selenium = "^4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
